compiler/tests/fixtures/compile_errors/call_undefined_function_on_contract.fe
contract Bar:
  pub def test():
    self.doesnt_exist()